[project]
name = "reddit-ven-anigha-archive"
requires-python = ">=3.13"
version = "0.1.0"
description = "Fetches and archives comments from /u/Bhikkhu_Anigha's comments on Reddit"
readme = "README.md"
authors = [
  { name = "f0lie", email = "9092074+f0lie@users.noreply.github.com" }
]
dependencies = [
    "praw",
    "python-dotenv",
    "tqdm",
]

[dependency-groups]
dev= [
    "pytest>=8.0",
    "coverage",
    "pytest-cov"
]
lint = [
    "ruff"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-q"
]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.coverage.run]
branch = true
source = ["src"] 

[tool.coverage.report]
show_missing = true
skip_covered = true
